2006-09-28  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Print the debug messages only if $DEBUG is on.

	* AUTHORS:
	Added Sebastian and James.

2006-09-28  James MacAulay  <jmacaulay@gmail.com>

	* src/lib/rbosa.rb:
	Properly convert the 'comp' type to real 64-bit value.

2006-09-27  Sebastian Delmont  <sd@notso.net>

	* src/lib/rbosa.rb:
	Added support for the QuickDraw rectangle type.

2006-09-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Do not implicitly resolve 'reference'-typed objects.

2006-09-17  Laurent Sansonetti  <lsansonetti@apple.com>

	* TODO:
	Closed the libxml task.

2006-09-14  Laurent Sansonetti  <lsansonetti@apple.com>

	* README:
	Mention that libxml-ruby is now required.

	* src/lib/rbosa.rb:
	- Requires libxml-ruby and uses it to parse the sdef file ;
	- Fixed a bug where certain setter property methods were not
	  generated.

	* src/rbosa.c:
	s/OSA::Application/OSA::EventDispatcher.

2006-08-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	Big change: try to minimize the send of apple events. We won't
	implicitly resolve object specifiers unless 1) a command is
	messaged 2) a primitive type (which is not defined in the sdef)
	is get 3) a property setter is messaged and 4) you explicitly
	call the #get method on the object. 

	* src/rbosa.c:
	Added OSA::Element#inspect that prints the contents of the
	embedded descriptor.

2006-08-24  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/rbosa.c:
	- Added OSA::Element#==() that compares the descriptors data ;
	- Make sure we rb_fatal() when we can't allocate memory ;
	- When guessing classes, do some sanity checks before, and 
	  cleaned the byte swapping part ;
	- Cleaned the four char code to string conversions. 

	* src/lib/rbosa.rb:
	Don't override existing methods, prefixing the generated 
	method names with 'osa_' when necessary. When mapping the
	commands, filter the classes to only take the oldest ones in