@@ -1,3 +1,8 @@
+2006-09-29  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa.rb, src/rbosa.c:
+	Added support for list of types parameters.
+
 2006-09-28  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* src/lib/rbosa.rb:
